Updated getters with dicts, updated tests
Signed-off-by: Gary Berger <gberger@brocade.com>

--- a/napalm_brocade_fastiron/utils/textfsm_templates/fastiron_show_version.template
+++ b/napalm_brocade_fastiron/utils/textfsm_templates/fastiron_show_version.template
@@ -8,6 +8,6 @@ Value Second (\d+)
 
 Start
   ^\s+SW: Version ${OSVersion}
-  ^\s+HW: Stackable $Model
+  ^\s+HW: Stackable ${Model}
   ^\s+Serial  #:${Serial_Number}
   ^STACKID 1  system uptime is ${Day} day\(s\) ${Hour} hour\(s\) ${Minute} minute\(s\) ${Second} second\(s\)
