Update to driver and tests
Signed-off-by: Gary Berger <gberger@brocade.com>

--- a/napalm_brocade_fastiron/utils/textfsm_templates/fastiron_show_interfaces.template
+++ b/napalm_brocade_fastiron/utils/textfsm_templates/fastiron_show_interfaces.template
@@ -14,8 +14,9 @@ Start
   ^${Interface} is ${Admin}, line protocol is ${Oper}
   ^ \s+Port (\S+) for ${Day} day\(s\) ${Hour} hour\(s\) ${Minute} minute\(s\) ${Second} second\(s\)
   ^ \s+Hardware is (\S+), address is ${LinkLocal}
-  ^ \s+Configured speed (\S+), actual ${Speed}, configured duplex fdx, actual unknown
+  ^ \s+Configured speed (\S+), actual ${Speed}, configured duplex (\S+), actual (\S+)
   ^ \s+Port name is ${Description} 
   ^UC Egress queues:
   ^MC Egress queues:
   ^Queue counters    Queued packets    Dropped Packets -> Record
+
