Update driver and tests
Signed-off-by: Gary Berger <gberger@brocade.com>

--- a/test/unit/fastiron/new_good.conf
+++ b/test/unit/fastiron/new_good.conf
@@ -1,1 +1,78 @@
-A full new configuration. It will be used to test the replace operation
+Current configuration:
+!
+ver 08.0.40bbT211
+!
+stack unit 1
+  module 1 icx7450-48-port-management-module
+  module 2 icx7400-xgf-4port-40g-module
+  module 3 icx7400-qsfp-1port-40g-module
+  module 4 icx7400-qsfp-1port-40g-module
+!
+!
+!
+!
+!
+vlan 1 name DEFAULT-VLAN by port
+!
+vlan 4 by port
+ untagged ethe 2/1/10
+!
+vlan 300 by port
+ untagged ethe 1/1/13
+!
+vlan 2001 by port
+ untagged ethe 1/1/11
+!
+!
+!
+!
+authentication
+ critical-vlan 2001
+ auth-default-vlan 4
+ restricted-vlan 300
+ re-authentication
+ reauth-period 120
+ pass-through lldp
+ dot1x enable
+ dot1x enable ethe 1/1/1
+ dot1x max-req 3
+ dot1x timeout quiet-period 15
+ dot1x timeout supplicant 2
+!
+aaa authentication enable default local
+aaa authentication dot1x default radius
+aaa authentication login default local
+aaa accounting dot1x default start-stop radius
+ip address 10.21.237.131 255.255.255.128
+no ip dhcp-client enable
+ip default-gateway 10.21.237.129
+!
+logging console
+username test password .....
+username admin password .....
+radius-server host 10.21.240.42 auth-port 1812 acct-port 1813 default key 0 config123
+!
+!
+clock summer-time
+clock timezone us Pacific
+interface ethernet 1/1/1
+ dot1x port-control auto
+ port-name to196PC
+ disable
+!
+!
+!
+!
+!
+!
+!
+!
+alias cd=clear dot1x sessions
+alias sd=show dot1x sess all
+!
+local-userdb ssh
+ username brocade password $e$)9-C*U%G'K5
+ username admin password $e$)J5A,5b+
+ username poc password $e$%Za7B%
+!
+end
