--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,17 @@
-[pylama]
-linters = mccabe,pep257,pep8,pyflakes,import_order
-ignore = D203
+#[pylama]
+#linters = mccabe,pep8,pyflakes
+#ignore = D203,C901
+#skip = build/*,.tox/*
 
-[pylama:pep8]
-max_line_length = 100
+#[pylama:pep8]
+#max_line_length = 100
 
 [tool:pytest]
-addopts = --cov=./ -vs
+addopts = --cov=napalm_brocade_fastiron  -vs
+#addopts = --cov=napalm_brocade_fastiron --cov-report term-missing -vs --pylama
 json_report = report.json
 jsonapi = true
 
 [coverage:run]
-include =
-  napalm_brocade_fastiron/*
+source = napalm_brocade_fastiron
+
